# quantum-attention-research

./: .gitignore  CONTRIBUTING.md  LICENSE  PAPER.md  README.md  ROADMAP.md  classical_comparison.py  demo.ipynb  demo_qft_attention.ipynb  hardware_aware.py  hybrid_training.py  noise_simulation.py  parameter_shift_gradients.py  pyproject.toml  pytorch_integration.py  qft_attention.py  qft_attention_advanced.py  quantum_attention_trainable.py  scalability_benchmark.py
.github/workflows/: workflow.yml
docs/: v0.2.0-implementation-plan.md
qft_attention/: cli.py
quantum_attention_research.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_qft_attention.py
