[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-attention-research"
version = "0.1.1"
description = "QFT-based quantum attention layer prototype"
authors = [{name = "Glenn Guilloux", email = "glennguilloux@users.noreply.github.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=0.45.0",
    "qiskit-aer>=0.13.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
]
torch = [
    "torch>=2.0.0",
]
all = [
    "quantum-attention-research[dev,torch]",
]

[project.scripts]
qft-benchmark = "qft_attention.cli:main"
qft-train = "qft_attention.cli:main"
qft-hardware = "qft_attention.cli:main"

[project.urls]
Homepage = "https://github.com/glennguilloux/quantum-attention-research"
Documentation = "https://github.com/glennguilloux/quantum-attention-research#readme"
Repository = "https://github.com/glennguilloux/quantum-attention-research"

[tool.setuptools.packages.find]
where = ["."]
include = ["qft_attention*"]

[tool.setuptools.package-data]
qft_attention = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
